# purr

./: README.md  pyproject.toml
src/purr/: __init__.py  cli.py
src/purr/_generator/: cpp.py  emitter.py  tablegen.py
src/purr/_internal/: builders.py  defs.py  domain.py  exceptions.py  traits.py  types.py
